Reblue: Fixed pager z-index.

--- a/style.css
+++ b/style.css
@@ -356,7 +356,7 @@ ul.fg-menu li:active {
 	font-size: 12px;
 	margin-right: 7px;
 	padding: 4px 8px;
-	z-index: 5;
+	z-index: 999;
 	position: relative;
 	top: -50px;
 }
